# 2020Fall-SYSU-Computer_Graphics

./: README.md
Assignment1/: assignment1_code.rar
Assignment1/hw1_陈家豪_18308013/code/: main.cpp
Assignment2/: Assignment2_code.rar
Assignment2/hw2_18308013_陈家豪/code/: main.cpp
Assignment3/: assignment3_code.rar
Assignment3/hw3_18308013_陈家豪/code（实现超采样）/: main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/hw3_18308013_陈家豪/code（未实现超采样）/: rasterizer.cpp  rasterizer.hpp
Assignment4/hw4_18308013_陈家豪/code/assignment4_code/: Makefile  main.cpp  model.cpp  our_gl.cpp  our_gl.h  tgaimage.h
Assignment4/hw4_18308013_陈家豪/code/opengl_code/: 5_3_light.cpp  6.multiple_lights.fs  shader_s.h
Assignment5/: assignment5_code.rar
Assignment5/hw5_18308013_陈家豪/code/: PathTracer.cpp  PathTracer.h  camera.h  hitable.h  hitable_list.h  main.cpp  material.h  random.h  ray.h  sphere.h  vec3.h
Assignment6/: assignment6_code.rar
Assignment6/hw6_18308013_陈家豪/code/: main.cpp
Assignment7/: a7code.rar
Assignment7/hw7_18308013_陈家豪/code/src/: application.cpp  rope.cpp
Assignment8/第6组_期末大作业项目材料/: README.md
Assignment8/第6组_期末大作业项目材料/code/: CMakeLists.txt
Assignment8/第6组_期末大作业项目材料/code/assets/: final.blend  old_house.mtl
Assignment8/第6组_期末大作业项目材料/code/src/InOneWeekend/: PathTracer.cpp  PathTracer.h  aabb.h  bvh_node.cpp  bvh_node.h  hitable_list.cpp  hittable.h  hittable_list.h  main.cpp  material.h  mesh.hpp  model.cpp  model.hpp  onb.h  pdf.h  sphere.h  transformer.cpp  transformer.hpp  triangle.h
Assignment8/第6组_期末大作业项目材料/code/src/common/: texture.h  vec3.h
Assignment8/第6组_期末大作业项目材料/release/: inOneWeekend
